# adventofcode-2023

./: adventofcode2023.cabal
app/: Main.hs
src/: Day01a.hs  Day01b.hs  Day02a.hs  Day02b.hs  Day03a.hs  Day03b.hs  Day04a.hs  Day04b.hs  Day05a.hs  Day05b.hs  Day06a.hs  Day06b.hs  Day07a.hs  Day07b.hs  Day08a.hs  Day08b.hs  Day09a.hs  Day09b.hs  Day10a.hs  Day10b.hs  Day11a.hs  Day11b.hs  Day12a.hs  Day12b.hs  Day13a.hs  Day13b.hs  Day14a.hs  Day14b.hs  Day15a.hs  Day15b.hs  Day16a.hs  Day16b.hs  Day17.hs  Day19.hs
