cabal-version:      2.4
name:               adventofcode2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

extra-source-files: CHANGELOG.md

library
    exposed-modules:  Day01a
                      Day01b
                      Day02a
                      Day02b
                      Day03a
                      Day03b
                      Day04a
                      Day04b
                      Day05a
                      Day05b
                      Day06a
                      Day06b
                      Day07a
                      Day07b
                      Day08a
                      Day08b
                      Day09a
                      Day09b
                      Day10a
                      Day10b
                      Day11a
                      Day11b
                      Day12a
                      Day12b
                      Day13a
                      Day13b
                      Day14a
                      Day14b
                      Day15a
                      Day15b
                      Day16a
                      Day16b
                      Day17
                      Day19

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      split,
                      containers,
                      parsec,
                      memoize,
                      array
    hs-source-dirs:   src
    default-language: Haskell2010

executable adventofcode2023
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        adventofcode2023

    hs-source-dirs:   app
    default-language: Haskell2010
